# pixel-map

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  test_plotting_console.py  tox.ini
.github/workflows/: _tests.yml  bump-and-pr.yml  ci-prod.yml  gh-release.yml  manual_tests.yml
pixel_map/: __init__.py  __main__.py  plotter.py
pixel_map/example_files/: london_buildings.parquet  london_park.parquet  london_water.parquet  monaco_buildings.parquet
tests/: test_cli.py
